Minor adjustments to the hero card; prevent stat values from wrapping and hero names from overflowing the card in some languages
(cherry picked from commit 6843c4199d9ae8474b49b510b0dd85f3cff38295)

--- a/static/css/pages/hero.css
+++ b/static/css/pages/hero.css
@@ -29,7 +29,7 @@
 .hero-class-name {
     margin: 0;
     padding-left: 0.25rem;
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     text-shadow: 0.05rem 0.05rem 0.3rem black;
     -webkit-text-stroke-width: 0.04rem;
     -webkit-text-stroke-color: black;
@@ -75,6 +75,7 @@
 
 .hero-stat-power {
     font-size: 2.25rem;
+    white-space: nowrap;
     text-shadow: 0.3rem 0.3rem 0.6rem black;
     -webkit-text-stroke-width: 0.09rem;
     -webkit-text-stroke-color: black;
@@ -131,6 +132,7 @@
 .hero-stat-value {
     font-size: 1.25rem;
     text-align: right;
+    white-space: nowrap;
     color: var(--color-stat-text-almond);
 }
 
